nignx-homarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-homarr-ingress
  namespace: homarr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: homarr.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr-service
                port: 80
                  number: 7575
